# neural_joking_machine

./: .gitignore  README.md  pyproject.toml  relation.csv
scripts/: build_vocab.py  data_loader.py  resize.py  scrapying.py  train.py
src/: build_vocab.py  data_loader.py  resize.py  sample.py  scrapying.py  tokenizer.py  train.py
tests/: test_data_loader.py  test_tokenizer.py  test_vocab.py
