[tool.poetry]
name = "research"
version = "0.1.0"
description = ""
authors = ["meciwo <shanshan0474@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "^1.7.0"
pillow = "^8.0.1"
mecab-python3 = "^1.0.3"
torchvision = "^0.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
